--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -8,6 +8,7 @@
   height: 7px;
   background-color: rgba(16, 2, 39, 0.514);
   border-radius: 20px;
+  transition: 0.2s ease-in-out;
 }
 
 .alice-carousel__dots-item:not(.__custom):not(:last-child) {
@@ -23,7 +24,7 @@
   width: 20px;
 }
 
-.alice-carousel__prev-btn-item, 
+.alice-carousel__prev-btn-item,
 .alice-carousel__next-btn-item {
-  display: none
+  display: none;
 }
